# email2kafka-tester-cli

./: .gitignore  README.md  application-spec.md  e2k-tester  pyproject.toml
docs/: architecture.md  configuration.md  docs-overview.md  spec-alignment.md  testing-and-quality.md  ubiquitous-language.md  workflows.md
samples/: sample-avsc-schema.json  sample-json-schema.json  sample-template.xlsx
scripts/: uvrun
src/simple_e2e_tester/: __init__.py  __main__.py  cli.py
src/simple_e2e_tester/bootstrap/: __init__.py  project_bootstrap.py
src/simple_e2e_tester/configuration/: __init__.py  config_scaffold_builder.py  loader.py  runtime_settings.py
src/simple_e2e_tester/email_sending/: __init__.py  delivery_outcomes.py  email_dispatch.py
src/simple_e2e_tester/kafka_consumption/: actual_event_messages.py  actual_event_reader.py  observed_event_messages.py  observed_event_reader.py
src/simple_e2e_tester/matching_validation/: __init__.py  case_evaluator.py  event_boundary_mappers.py  expectation_rules.py  matching_outcomes.py
src/simple_e2e_tester/results_writing/: __init__.py  report_models.py  run_report_writer.py
src/simple_e2e_tester/run_execution/: __init__.py  run_contracts.py  validation_run_use_case.py
src/simple_e2e_tester/schema_management/: __init__.py  schema_models.py  schema_projection.py
src/simple_e2e_tester/template_generation/: __init__.py  constants.py  template_workbook_builder.py
src/simple_e2e_tester/template_ingestion/: __init__.py  testcase_models.py  workbook_reader.py
tests/: conftest.py
tests/cli/unit/: test_cli_error_handling.py  (+1 more)
(+22 files in other folders)
