[project]
name = "simple-e2e-tester"
version = "0.1.0"
description = "Schema-driven e2e email to Kafka validation runner"
authors = [{ name = "Markus Fischer", email = "markus.fischer@senacor.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1.7,<9",
  "pydantic>=2.7.1,<3",
  "pyyaml>=6.0.1,<7",
  "openpyxl>=3.1.2,<4",
  "confluent-kafka>=2.4.0,<3",
  "tenacity>=8.2.3,<9",
  "email-validator>=2.1.1,<3",
  "rapidfuzz>=3.7.0,<4",
]

[dependency-groups]
dev = [
  "pytest>=8.1.1,<9",
  "pytest-cov>=5.0.0,<6",
  "pytest-mock>=3.12.0,<4",
  "ruff>=0.4.2,<0.5",
  "mypy>=1.9.0,<2",
  "pylint>=3.1.0,<4",
  "types-PyYAML>=6.0.12.20240311,<7",
  "types-openpyxl>=3.1.0.20240311,<4",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = [
  "tests"
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E203"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
strict_optional = true

[tool.pylint.MASTER]
load-plugins = "pylint.extensions.docparams"

[tool.pylint.'MESSAGES CONTROL']
disable = "missing-module-docstring,missing-class-docstring,missing-function-docstring"

[tool.pylint.BASIC]
good-names = "id,i,j,k,ex,Run,_,db"

[tool.hatch.build.targets.wheel]
packages = ["src/simple_e2e_tester"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
